fixed misaligned phone contact elements when page was resized after loading

--- a/assets/css/supplemental.css
+++ b/assets/css/supplemental.css
@@ -34,8 +34,10 @@ h4 {
 }
 
 .contact-element {
-    margin: 10px;
+    margin: 10px 10px 10px 4.5em;
+    width: fit-content;
 }
+
 .contact-element.email {
     margin: 10px;
     width: fit-content;
